Fix font styling for dark mode and strong text

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -67,6 +67,9 @@ body.dark-mode nav {
 	body,
 	body button,
 	body h1,
+	body strong,
+	body b,
+	body em,
 	body blockquote,
 	body .go-home {
 		background: var(--black);
